Hopefully fixed font errors on iOS

--- a/Assets/mob-styles.css
+++ b/Assets/mob-styles.css
@@ -7,6 +7,7 @@
     font-size: 3em;
     width: 70%;
     font-family: sofia-light;
+    text-rendering: optimizeLegibility;
     color: #FF0080
 }
 /* Footer */
